package com.unsw.tilegame.view;

import javafx.scene.Scene;

/**
 * interface for all scenes
 * @author cecilian
 * @version 2.5
 * @since 2.5
 */
public interface SceneMaker {
	Scene getScene();
}
